--- a/android/app/src/main/res/layout/fragment_placelist.xml
+++ b/android/app/src/main/res/layout/fragment_placelist.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -7,12 +8,15 @@
         android:id="@+id/toolbar"
         layout="@layout/toolbar" />
 
-    <LinearLayout
-        android:id="@+id/listContainer"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/placeList"
+        android:name="no.dnt.sjekkut.ui.TripListFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/toolbar"
-        android:orientation="vertical" />
+        app:layoutManager="LinearLayoutManager"
+        tools:context="no.dnt.sjekkut.ui.PlaceListFragment"
+        tools:listitem="@layout/item_place" />
 
     <com.melnykov.fab.FloatingActionButton
         android:id="@+id/fab"
