Remove old code and rename mountain to place etc.

--- a/android/app/src/main/res/layout/fragment_place.xml
+++ b/android/app/src/main/res/layout/fragment_place.xml
@@ -38,7 +38,7 @@
                     android:layout_marginRight="4sp" />
 
                 <include
-                    layout="@layout/layout_mountaininfo"
+                    layout="@layout/layout_placeinfo"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
