--- a/android/app/src/main/res/layout/item_place.xml
+++ b/android/app/src/main/res/layout/item_place.xml
@@ -13,7 +13,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
-        android:contentDescription="@string/cd_mountain_image" />
+        android:contentDescription="@string/cd_place_image" />
 
     <LinearLayout
         android:id="@+id/checkinContainer"
@@ -48,7 +48,7 @@
     </LinearLayout>
 
     <include
-        layout="@layout/layout_mountaininfo"
+        layout="@layout/layout_placeinfo"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
