--- a/android/app/src/main/res/layout/layout_placeinfo.xml
+++ b/android/app/src/main/res/layout/layout_placeinfo.xml
@@ -19,10 +19,10 @@
         android:textColor="@color/text_main"
         android:textSize="@dimen/textsize_medium"
         android:textStyle="bold"
-        tools:text="En Fjelltopp" />
+        tools:text="En turpost" />
 
     <TextView
-        android:id="@+id/county_and_height"
+        android:id="@+id/county"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
@@ -36,7 +36,7 @@
         tools:text="Fylke, 100m" />
 
     <TextView
-        android:id="@+id/summits"
+        android:id="@+id/visits"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
@@ -47,7 +47,7 @@
         android:singleLine="true"
         android:textColor="@color/text_additional"
         android:textSize="@dimen/textsize_small"
-        tools:text="Besteget X ganger" />
+        tools:text="Besøkt X ganger" />
 
     <TextView
         android:id="@+id/distance"
