--- a/ios/SjekkUT/Base.lproj/Main.storyboard
+++ b/ios/SjekkUT/Base.lproj/Main.storyboard
@@ -1009,6 +1009,7 @@
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hS6-Oj-76Z" customClass="DntRedView">
                                                     <rect key="frame" x="0.0" y="0.0" width="600" height="23"/>
+                                                    <color key="backgroundColor" red="0.84705882349999995" green="0.1764705882" blue="0.12549019610000001" alpha="1" colorSpace="calibratedRGB"/>
                                                 </view>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XHg-Uz-lpr">
                                                     <rect key="frame" x="16" y="1" width="568" height="21"/>
@@ -1017,7 +1018,6 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
-                                            <color key="backgroundColor" red="0.84705882349999995" green="0.1764705882" blue="0.12549019610000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <constraints>
                                                 <constraint firstAttribute="bottom" secondItem="XHg-Uz-lpr" secondAttribute="bottom" constant="1" id="3OC-b7-peZ"/>
                                                 <constraint firstAttribute="trailing" secondItem="hS6-Oj-76Z" secondAttribute="trailing" id="B72-cS-SJi"/>
@@ -1030,34 +1030,32 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="y6r-c9-jdz">
-                                        <rect key="frame" x="0.0" y="319" width="600" height="44"/>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="100" id="y6r-c9-jdz">
+                                        <rect key="frame" x="0.0" y="319" width="600" height="100"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="y6r-c9-jdz" id="v4Y-Qp-ubr">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="100"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <textView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" delaysContentTouches="NO" canCancelContentTouches="NO" bouncesZoom="NO" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VUz-fz-7Ol">
-                                                    <rect key="frame" x="16" y="8" width="568" height="28"/>
-                                                    <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                                                    <dataDetectorType key="dataDetectorTypes" phoneNumber="YES" link="YES"/>
+                                                <webView userInteractionEnabled="NO" contentMode="scaleToFill" allowsInlineMediaPlayback="NO" mediaPlaybackRequiresUserAction="NO" mediaPlaybackAllowsAirPlay="NO" keyboardDisplayRequiresUserAction="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O7u-CL-Lvc">
+                                                    <rect key="frame" x="8" y="8" width="584" height="84"/>
+                                                    <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="deviceRGB"/>
+                                                    <dataDetectorType key="dataDetectorTypes"/>
                                                     <connections>
-                                                        <outlet property="delegate" destination="Jt5-sv-F5Z" id="g4U-2L-BpH"/>
+                                                        <outlet property="delegate" destination="Jt5-sv-F5Z" id="kK9-ct-D5a"/>
                                                     </connections>
-                                                </textView>
+                                                </webView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="VUz-fz-7Ol" firstAttribute="leading" secondItem="v4Y-Qp-ubr" secondAttribute="leading" constant="16" id="4yG-Iz-tHj"/>
-                                                <constraint firstAttribute="trailing" secondItem="VUz-fz-7Ol" secondAttribute="trailing" constant="16" id="XnV-fo-H1r"/>
-                                                <constraint firstAttribute="bottom" secondItem="VUz-fz-7Ol" secondAttribute="bottom" constant="8" id="bY7-lJ-gCU"/>
-                                                <constraint firstItem="VUz-fz-7Ol" firstAttribute="top" secondItem="v4Y-Qp-ubr" secondAttribute="top" constant="8" id="vrx-4N-rme"/>
+                                                <constraint firstItem="O7u-CL-Lvc" firstAttribute="top" secondItem="v4Y-Qp-ubr" secondAttribute="topMargin" id="Frq-n7-w2d"/>
+                                                <constraint firstItem="O7u-CL-Lvc" firstAttribute="leading" secondItem="v4Y-Qp-ubr" secondAttribute="leadingMargin" id="fFc-eg-6cY"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="O7u-CL-Lvc" secondAttribute="trailing" id="l89-Ex-VQ9"/>
+                                                <constraint firstItem="O7u-CL-Lvc" firstAttribute="bottom" secondItem="v4Y-Qp-ubr" secondAttribute="bottomMargin" id="qFL-dg-7lb"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="7Ot-XQ-10Z">
-                                        <rect key="frame" x="0.0" y="363" width="600" height="44"/>
+                                        <rect key="frame" x="0.0" y="419" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="7Ot-XQ-10Z" id="GUW-do-eOl">
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
@@ -1065,7 +1063,7 @@
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nfn-4H-tNh">
                                                     <rect key="frame" x="60" y="5" width="480" height="34"/>
-                                                    <color key="backgroundColor" red="0.84705882349999995" green="0.1764705882" blue="0.12549019610000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <color key="backgroundColor" red="0.84705882352941175" green="0.17647058823529413" blue="0.12549019607843137" alpha="1" colorSpace="calibratedRGB"/>
                                                     <state key="normal" title="Read More"/>
                                                     <connections>
                                                         <action selector="readMoreClicked:" destination="Jt5-sv-F5Z" eventType="touchUpInside" id="4d1-FR-tTZ"/>
@@ -1080,7 +1078,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="23" id="oS6-aC-bn6">
-                                        <rect key="frame" x="0.0" y="407" width="600" height="23"/>
+                                        <rect key="frame" x="0.0" y="463" width="600" height="23"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="oS6-aC-bn6" id="k42-LE-MG1">
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="23"/>
@@ -1088,6 +1086,7 @@
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fuB-A8-y6V" customClass="DntRedView">
                                                     <rect key="frame" x="0.0" y="0.0" width="600" height="23"/>
+                                                    <color key="backgroundColor" red="0.84705882349999995" green="0.1764705882" blue="0.12549019610000001" alpha="1" colorSpace="calibratedRGB"/>
                                                 </view>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Checkins" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z17-1s-HLU">
                                                     <rect key="frame" x="16" y="1" width="568" height="21"/>
@@ -1096,7 +1095,6 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
-                                            <color key="backgroundColor" red="0.84705882349999995" green="0.1764705882" blue="0.12549019610000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <constraints>
                                                 <constraint firstAttribute="trailing" secondItem="z17-1s-HLU" secondAttribute="trailing" constant="16" id="2CD-a7-cmU"/>
                                                 <constraint firstItem="z17-1s-HLU" firstAttribute="top" secondItem="k42-LE-MG1" secondAttribute="top" constant="1" id="9rv-Vn-056"/>
@@ -1110,7 +1108,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" id="98B-3h-n0s">
-                                        <rect key="frame" x="0.0" y="430" width="600" height="44"/>
+                                        <rect key="frame" x="0.0" y="486" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="98B-3h-n0s" id="yA0-R6-LbH">
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
@@ -1129,47 +1127,6 @@
                                                 <constraint firstAttribute="bottom" secondItem="6BL-4R-YAG" secondAttribute="bottom" constant="8" id="JZB-TD-kyb"/>
                                                 <constraint firstItem="6BL-4R-YAG" firstAttribute="top" secondItem="yA0-R6-LbH" secondAttribute="top" constant="8" id="Oxo-Fm-ehJ"/>
                                             </constraints>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="80" id="QIQ-iX-uPS">
-                                        <rect key="frame" x="0.0" y="474" width="600" height="80"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="QIQ-iX-uPS" id="QEl-54-j6q">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="80"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BES-ZN-c87" userLabel="Checkin">
-                                                    <rect key="frame" x="70" y="0.0" width="460" height="72"/>
-                                                    <color key="backgroundColor" red="0.84705882349999995" green="0.1764705882" blue="0.12549019610000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="72" id="7wm-IF-MHt">
-                                                            <variation key="heightClass=compact-widthClass=regular" constant="50"/>
-                                                        </constraint>
-                                                    </constraints>
-                                                    <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="14"/>
-                                                    <inset key="titleEdgeInsets" minX="5" minY="5" maxX="5" maxY="5"/>
-                                                    <state key="normal" title="Check in!"/>
-                                                    <userDefinedRuntimeAttributes>
-                                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                                            <integer key="value" value="15"/>
-                                                        </userDefinedRuntimeAttribute>
-                                                    </userDefinedRuntimeAttributes>
-                                                    <connections>
-                                                        <action selector="checkinClicked:" destination="Jt5-sv-F5Z" eventType="touchUpInside" id="Noc-aq-0i7"/>
-                                                    </connections>
-                                                </button>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstAttribute="trailing" secondItem="BES-ZN-c87" secondAttribute="trailing" constant="70" id="5tv-CQ-H04"/>
-                                                <constraint firstItem="BES-ZN-c87" firstAttribute="top" secondItem="QEl-54-j6q" secondAttribute="top" id="6zq-y5-BmV"/>
-                                                <constraint firstAttribute="bottom" secondItem="BES-ZN-c87" secondAttribute="bottom" id="Ob2-zw-sux"/>
-                                                <constraint firstItem="BES-ZN-c87" firstAttribute="leading" secondItem="QEl-54-j6q" secondAttribute="leading" constant="70" id="Uo2-vk-LNW"/>
-                                            </constraints>
-                                            <variation key="default">
-                                                <mask key="constraints">
-                                                    <exclude reference="Ob2-zw-sux"/>
-                                                </mask>
-                                            </variation>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </cells>
@@ -1197,12 +1154,11 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="checkinButton" destination="BES-ZN-c87" id="lCR-q3-Q7F"/>
                         <outlet property="checkinCell" destination="98B-3h-n0s" id="PnE-lj-vRO"/>
                         <outlet property="checkinLabel" destination="6BL-4R-YAG" id="5e6-GX-guu"/>
                         <outlet property="checkinTitle" destination="z17-1s-HLU" id="pgr-hZ-VLt"/>
-                        <outlet property="descriptionLabel" destination="VUz-fz-7Ol" id="pSt-6H-CKg"/>
                         <outlet property="descriptionTitle" destination="XHg-Uz-lpr" id="Zt1-fg-cBW"/>
+                        <outlet property="descriptionWebView" destination="O7u-CL-Lvc" id="Cf1-Nh-7G5"/>
                         <outlet property="mapView" destination="Ooa-qg-Hjm" id="8Zi-On-Xff"/>
                         <outlet property="placeCell" destination="G60-6u-wew" id="Tfn-iw-6VC"/>
                         <outlet property="shareButton" destination="hQM-Dp-f9c" id="EG9-VI-HBV"/>
